--- a/pages/About us/About-us-styles.css
+++ b/pages/About us/About-us-styles.css
@@ -1,9 +1,9 @@
 :root{
-  --secondaryMedium: #2563EB;
+  --primaryDark:  #0F172A;
   --primaryLight:#E2E8F0;
 }
 body{
-  background-color:var(--secondaryMedium);
+  background-color:var(--primaryDark);
   display: flex;
   flex-direction: column;
   color: var(--primaryLight);
@@ -13,6 +13,7 @@ body{
 main{
   padding-top: 1rem;
   padding-left: 2rem;
+  margin: 1rem;
 }
 p{
   font-size: 14px;
@@ -46,5 +47,19 @@ p{
   border-radius: 100%;
 height: 150px;
 width: 140px;
+
+}
+@media (max-width:750px){
+  main{
+    padding-left:  0px; 
+  }
+  .upperPart .image{
+    display: none;
+  }
+  .lowerPart .nosotros .equipo img{
+  height: 60px;
+  width: 50px;
+  
+  }
 
 }
